# Olympus-AI

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  Makefile  Prompt.md  README.md  SUMMARY.md  Tactical Implementation.md  alerts.yml  app.py  changes-needed.txt  docker-compose.app.yml  docker-compose.infra.yml  docker-compose.prom.yml  docker-compose.yml  llm_config.yaml  prometheus.yml  requirements-dev.txt  run.sh  run_and_smoke.zsh  smoke.zsh
.data/: olympus.db-shm  olympus.db-wal
apps/api/: README.md  pyproject.toml
apps/api/olympus_api/: auth.py  cors.py  logging.py  main.py  metrics.py  middleware.py  nl_agent.py  planner.py  plans.py  settings.py
apps/api/olympus_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/worker/: README.md  pyproject.toml
apps/worker/olympus_worker/: executor.py  health.py  main.py
apps/worker/olympus_worker.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
client/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
configs/: otel-collector.yaml
control-plane/: Cargo.toml  Dockerfile  build.rs
control-plane/src/: main.rs
data/: olympus.db
desktop/: README.md  build.spec  pyproject.toml
desktop/app/: backend.py  main.py
desktop/app/ui/: app.js  index.html  styles.css
desktop/olympus_desktop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: Agent-Capabilities.md  LLM-Setup-llamacpp.md  Pitch-Deck.md  README.md  User-Guide.md
infra/: init.sh
olympus_api/: __init__.py  main.py
olympus_llm/: __init__.py  router.py
olympus_memory/: __init__.py
plans/: migration-plan.md
postman/: exec-service.postman_collection.json  webbot-service.postman_collection.json
public/: index.html
reports/: gap-analysis.md  repo-audit.md
scripts/: agent_cli.py  seed_docs.sql  seed_pgvector.sql  smoke.py
server/: .gitignore  Dockerfile  app.js  package-lock.json  package.json  server.js
tests/: conftest.py  test_api_health.py  test_config_echo.py  (+8 more)
(+71 files in other folders)
