[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "olympus-api"
version = "0.1.0"
description = "Olympus AI API (FastAPI)"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "prometheus-client>=0.20.0",
  "PyJWT>=2.8",
]

[tool.setuptools]
packages = ["olympus_api"]
