[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "olympus-worker"
version = "0.1.0"
description = "Olympus AI Worker Daemon"
requires-python = ">=3.10"
dependencies = ["pydantic>=2.7.0", "python-dotenv>=1.0.1"]

[tool.setuptools]
packages = ["olympus_worker"]
